--- a/dot.i3/config
+++ b/dot.i3/config
@@ -158,4 +158,4 @@ bar {
 
 # Start application on specific workspace.
 exec --no-startup-id i3-msg 'workspace 10; exec thunderbird; workspace 1'
-exec --no-startup-id i3-msg 'workspace 1; exec xterm; workspace 1'
+exec --no-startup-id i3-msg 'workspace 1; exec ${TERMINAL}; workspace 1'
