--- a/dot.i3status.conf
+++ b/dot.i3status.conf
@@ -6,13 +6,24 @@ general {
 
 order += "disk /home"
 order += "wireless wlan0"
-order += "battery 0"
+order += "ethernet em0"
+#order	+= "battery 0"
 order += "load"
 order += "tztime local"
 
 wireless wlan0 {
-	format_up = "wlan0: %essid %ip"
-	format_down = "W: down"
+	format_up = "wlan0: %ip (%essid)"
+	format_down = "wlan0: down"
+}
+
+ethernet em0 {
+	format_up = "em0: %ip (%speed)"
+	format_down = "em0: down"
+}
+
+ethernet msk0 {
+	format_up = "msk0: %ip (%speed)"
+	format_down = "msk0: down"
 }
 
 battery 0 {
