tmux: set autolock after 5 minutes
Signed-off-by: Oliver Pinter <oliver.pinter@hardenedbsd.org>

--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -24,7 +24,6 @@ bind-key C-a last-window
 bind-key a send-keys C-a
 unbind %
 
-
 # next ^@ ^N sp n 
 unbind ^@
 bind ^@ next-window
@@ -107,3 +106,6 @@ set -g visual-activity on
 
 #set -g mouse-select-window on
 #set -g mouse-select-pane on
+
+# lock the server after 5 minutes
+set -g lock-after-time 300
