opBSD: add igb0 to i3status's conf
Signed-off-by: Oliver Pinter <oliver.pinter@hardenedbsd.org>

--- a/dot.i3status.conf
+++ b/dot.i3status.conf
@@ -7,6 +7,7 @@ general {
 order += "disk /home"
 order += "wireless wlan0"
 order += "ethernet em0"
+order += "ethernet igb0"
 #order	+= "battery 0"
 order += "load"
 order += "tztime local"
@@ -19,6 +20,11 @@ wireless wlan0 {
 ethernet em0 {
 	format_up = "em0: %ip (%speed)"
 	format_down = "em0: down"
+}
+
+ethernet igb0 {
+	format_up = "igb0: %ip (%speed)"
+	format_down = "igb0: down"
 }
 
 ethernet msk0 {
