--- a/dot.i3/config
+++ b/dot.i3/config
@@ -144,7 +144,8 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Exec clipboard manager
-exec_always /usr/local/bin/clipit
+#exec_always /usr/local/bin/clipit
+exec /usr/local/bin/clipit
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
