--- a/dot.i3/config
+++ b/dot.i3/config
@@ -43,10 +43,10 @@ bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Alt_R focus left
-bindsym $mod+Super_R focus down
-bindsym $mod+Print focus up
-bindsym $mod+(null) focus right
+#bindsym $mod+Alt_R focus left
+#bindsym $mod+Super_R focus down
+#bindsym $mod+Print focus up
+#bindsym $mod+(null) focus right
 
 # move focused window
 bindsym $mod+Shift+j move left
@@ -55,10 +55,10 @@ bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Alt_R move left
-bindsym $mod+Shift+Super_R move down
-bindsym $mod+Shift+Print move up
-bindsym $mod+Shift+(null) move right
+#bindsym $mod+Shift+Alt_R move left
+#bindsym $mod+Shift+Super_R move down
+#bindsym $mod+Shift+Print move up
+#bindsym $mod+Shift+(null) move right
 
 # split in horizontal orientation
 bindsym $mod+h split h
@@ -97,6 +97,8 @@ bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
+bindsym $mod+minus workspace 11
+bindsym $mod+equal workspace 12
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -109,6 +111,8 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+minus move container to workspace 11
+bindsym $mod+Shift+equal move container to workspace 12
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -144,7 +148,6 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Exec clipboard manager
-#exec_always /usr/local/bin/clipit
 exec /usr/local/bin/clipit
 
 # Start i3bar to display a workspace bar (plus the system information i3status
@@ -158,5 +161,6 @@ bar {
 # assign[class="Thunderbird"] 10
 
 # Start application on specific workspace.
+#exec --no-startup-id i3-msg 'workspace 2; layout tabbed'
 exec --no-startup-id i3-msg 'workspace 10; exec thunderbird; workspace 1'
 exec --no-startup-id i3-msg 'workspace 1; exec ${TERMINAL}; workspace 1'
