--- a/dot.i3/config
+++ b/dot.i3/config
@@ -119,7 +119,9 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+#bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# hack to eliminate mouse usage on exit, this sends exit command directly to i3
+bindsym $mod+Shift+e exec "i3-input -P 'Do you want to exit i3? Type exit and press enter. ' -l 5"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
